--- a/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
+++ b/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
@@ -35,7 +35,7 @@ echo "source /opt/rh/devtoolset-9/enable" >> /etc/profile
 ```shell
 cd /usr/local/redis
 # 安装
-make
+make MALLOC=libc
 # 创建文件夹
 mkdir -p /usr/local/redis/etc
 mv redis.conf /usr/local/redis/etc/redis.conf
@@ -51,14 +51,17 @@ vi /usr/local/redis/etc/redis.conf
 requirepass laokou123
 daemonize yes
 ```
-<img src="/img/2/img_5.png"/>
+<img src="/img/2/img_5.png"/>  
 
-<img src="/img/2/img_6.png"/>
+<img src="/img/2/img_6.png"/>  
 
 ###### 启动
 ```shell
 /usr/local/redis/src/redis-server /usr/local/redis/etc/redis.conf
 ```
+<img src="/img/2/img_7.png"/>
+
+###### 安装完毕！！！
 
 ## 参考资料
 [centos7 安装redis](https://kcloud.blog.csdn.net/article/details/82589349)
