--- a/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
+++ b/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
@@ -35,6 +35,7 @@ echo "source /opt/rh/devtoolset-9/enable" >> /etc/profile
 ```shell
 cd /usr/local/redis
 # 安装
+# 指定分配器为libc
 make MALLOC=libc
 # 创建文件夹
 mkdir -p /usr/local/redis/etc
