--- a/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
+++ b/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
@@ -6,7 +6,12 @@ permalink: /pages/0fb88c/
 
 ## 下载RocketMQ
 <a target="_blank" href="https://github.com/apache/rocketmq/releases/tag/rocketmq-all-5.1.1">RocketMQ官网地址</a>
-<img src="/img/2/img.png"/>
+<img src="/img/3/img.png"/>
+
+## 开始安装
+```shell
+
+```
 
 ## 参考资料
 [centos7 安装单机RocketMQ5.0.0](https://kcloud.blog.csdn.net/article/details/128347059)
