--- a/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
+++ b/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
@@ -5,12 +5,44 @@ permalink: /pages/0fb88c/
 ---
 
 ## 下载RocketMQ
-<a target="_blank" href="https://github.com/apache/rocketmq/releases/tag/rocketmq-all-5.1.1">RocketMQ官网地址</a>
+<a target="_blank" href="https://rocketmq.apache.org/zh/download">RocketMQ官网地址</a>
 <img src="/img/3/img.png"/>
 
-## 开始安装
-```shell
+## 安装前提
 
+## 开始安装
+###### 上传压缩包（略）
+
+###### 解压
+```shell
+cd /opt
+# 安装unzip
+yum -y install unzip 
+# 解压
+unzip rocketmq-all-5.1.1-bin-release.zip
+```
+<img src="/img/3/img_1.png"/>
+
+###### 重命名
+```shell
+mv rocketmq-all-5.1.1-bin-release /usr/local/rocketmq5
+```
+<img src="/img/3/img_2.png"/>
+
+###### 修改配置
+```shell
+cd /usr/local/rocketmq5
+vi conf/broker.conf
+# 增加两项配置
+namesrvAddr=ip:9876
+brokerIP1=ip
+```
+<img src="/img/3/img_3.png"/>
+
+###### 启动
+```shell
+cd /usr/local/rocketmq5
+nohup sh bin/mqnamesrv &
 ```
 
 ## 参考资料
