--- a/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
+++ b/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
@@ -9,6 +9,7 @@ permalink: /pages/0fb88c/
 <img src="/img/3/img.png"/>
 
 ## 安装前提
+<a href='/pages/65acfd/'>Centos7安装Jdk 17.0.7</a>
 
 ## 开始安装
 ###### 上传压缩包（略）
@@ -39,11 +40,25 @@ brokerIP1=ip
 ```
 <img src="/img/3/img_3.png"/>
 
+###### 修改参数
+```shell
+vi runborker.sh
+vi runserver.sh
+```
+<img src="/img/3/img_7.png"/>
+<img src="/img/3/img_6.png"/>
+
 ###### 启动
 ```shell
 cd /usr/local/rocketmq5
 nohup sh bin/mqnamesrv &
+nohup sh bin/mqbroker -n 127.0.0.1:9876 -c conf/broker.conf autoCreateTopicEnable=true &
 ```
+<img src="/img/3/img_4.png"/>
+
+###### 安装完毕！！！
+
+## 安装
 
 ## 参考资料
 [centos7 安装单机RocketMQ5.0.0](https://kcloud.blog.csdn.net/article/details/128347059)
