--- a/docs/01.指南/01.环境搭建/04.Centos7安装Jdk 17.0.7.md
+++ b/docs/01.指南/01.环境搭建/04.Centos7安装Jdk 17.0.7.md
@@ -9,19 +9,20 @@ permalink: /pages/65acfd/
 <img src="/img/4/img.png"/>
 
 ## 开始安装
+###### 上传压缩包（略）
 ```shell
 cd /opt
 tar -zxvf jdk-17_linux-aarch64_bin.tar.gz
 ```
 <img src="/img/4/img_1.png"/>
 
-## 重命名
+###### 重命名
 ```shell
 mv jdk-17.0.7 /usr/local/jdk17 
 ```
 <img src="/img/4/img_2.png"/>
 
-## 环境配置
+###### 环境配置
 ```shell
 vi /etc/profile
 export JAVA_HOME=/usr/local/jdk17
@@ -30,18 +31,19 @@ export PATH=$PATH:$JAVA_HOME/bin
 ```
 <img src="/img/4/img_3.png"/>
 
-## 生效配置
+###### 生效配置
 ```shell
 source /etc/profile
 ```
 <img src="/img/4/img_4.png"/>
 
-## 查看版本
+###### 查看版本
 ```shell
 java -version
 ```
 <img src="/img/4/img_5.png"/>
 
+###### 安装完毕！！！
 
 ## 参考资料
 [centos7 安装jdk1.8](https://kcloud.blog.csdn.net/article/details/82184984)
