--- a/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
+++ b/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
@@ -35,10 +35,9 @@ mv rocketmq-all-5.1.1-bin-release /usr/local/rocketmq5
 cd /usr/local/rocketmq5
 vi conf/broker.conf
 # 增加两项配置
-namesrvAddr=ip:9876
-brokerIP1=ip
+namesrvAddr=192.168.1.100:9876
+brokerIP1=192.168.1.100
 ```
-<img src="/img/3/img_3.png"/>
 
 ###### 修改参数
 ```shell
@@ -52,9 +51,8 @@ vi runserver.sh
 ```shell
 cd /usr/local/rocketmq5
 nohup sh bin/mqnamesrv &
-nohup sh bin/mqbroker -n 127.0.0.1:9876 -c conf/broker.conf autoCreateTopicEnable=true &
+nohup sh bin/mqbroker -n 192.168.1.100:9876 -c conf/broker.conf autoCreateTopicEnable=true &
 ```
-<img src="/img/3/img_4.png"/>
 
 ###### 安装完毕！！！
 
