--- a/docs/01.指南/01.环境搭建/01.Centos7安装Mysql 8.0.33.md
+++ b/docs/01.指南/01.环境搭建/01.Centos7安装Mysql 8.0.33.md
@@ -4,9 +4,8 @@ date: 2023-06-11 10:29:46
 permalink: /pages/a2f161/
 ---
 
-小伙伴们，好久不见啊！我是老寇，我又回来啦！！！（此处需要掌声）
-
-话不多说，跟我一起安装Mysql 8.0.33
+小伙伴们，好久不见啊！我是老寇，我又回来啦！！！（此处需要掌声）   
+话不多说，跟我一起安装Mysql。
 
 ## 下载Mysql
 <a target="_blank" href="https://dev.mysql.com/downloads/mysql">Mysql官网下载地址</a>  
