--- a/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
+++ b/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
@@ -4,6 +4,9 @@ date: 2023-06-12 23:43:07
 permalink: /pages/0fb88c/
 ---
 
+小伙伴们，你们好呀，我是老寇！    
+话不多说，跟我一起安装RocketMQ。
+
 ## 下载RocketMQ
 <a target="_blank" href="https://rocketmq.apache.org/zh/download">RocketMQ官网地址</a>
 <img src="/img/3/img.png"/>
