--- a/docs/01.指南/01.环境搭建/04.Centos7安装Jdk 17.0.7.md
+++ b/docs/01.指南/01.环境搭建/04.Centos7安装Jdk 17.0.7.md
@@ -4,6 +4,9 @@ date: 2023-06-13 00:33:53
 permalink: /pages/65acfd/
 ---
 
+小伙伴们，你们好呀，我是老寇！    
+话不多说，跟我一起安装Jdk。
+
 ## 下载jdk17
 <a target="_blank" href="https://www.oracle.com/java/technologies/downloads/#java17">jdk官网地址</a>
 <img src="/img/4/img.png"/>
