--- a/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
+++ b/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
@@ -4,6 +4,9 @@ date: 2023-06-12 22:50:33
 permalink: /pages/90401a/
 ---
 
+小伙伴们，你们好呀！我是老寇！    
+话不多说，跟我一起安装Redis。
+
 ## 下载Redis
 <a target="_blank" href="https://redis.io/download">redis官网地址</a>
 <img src="/img/2/img.png"/>
