--- a/docs/01.指南/01.环境搭建/01.Centos7安装Mysql 8.0.33.md
+++ b/docs/01.指南/01.环境搭建/01.Centos7安装Mysql 8.0.33.md
@@ -143,6 +143,10 @@ read_buffer_size = 256K
 read_rnd_buffer_size = 512K
 myisam_sort_buffer_size = 8M
 datadir = /usr/local/mysql8/data
+lower_case_table_names = 1
+innodb_flush_log_at_trx_commit = 1
+sync_binlog = 1
+transaction_isolation = READ-COMMITTED
 #lower_case_table_names=1
 #如果要设置lower_case_table_names可以在初始化里面设置 ./mysqld --initialize --user=mysql --datadir=/usr/local/mysql/data --basedir=/usr/local/mysql --lower_case_table_names=1
 
