--- a/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
+++ b/docs/01.指南/01.环境搭建/02.Centos7安装Redis 7.0.11.md
@@ -54,6 +54,8 @@ vi /usr/local/redis/etc/redis.conf
 # 修改密码
 requirepass laokou123
 daemonize yes
+bind 0.0.0.0 -::1
+notify-keyspace-events KEA
 ```
 <img src="/img/2/img_5.png"/>  
 
