--- a/docs/02.赞助/01.赞助.md
+++ b/docs/02.赞助/01.赞助.md
@@ -27,21 +27,15 @@ article: false
         <th>备注</th>
     </tr>
     <tr>
+        <td>2023/06/29</td>
+        <td>顺</td>
+        <td>￥20</td>
+        <td>希望项目一直做下去就好</td>
+    </tr>
+    <tr>
         <td>2023/3/27</td>
         <td>s*e</td>
         <td>￥10</td>
         <td>无</td>
-    </tr>
-    <tr>
-        <td>2023/2/16</td>
-        <td>不愿透露姓名的网友</td>
-        <td>￥10</td>
-        <td>加油</td>
-    </tr>
-    <tr>
-        <td>2023/2/15</td>
-        <td>某不知名网友</td>
-        <td>￥50</td>
-        <td>老寇加油，看好你哦</td>
     </tr>
 </table>
