--- a/docs/01.指南/01.环境搭建/04.Centos7安装Jdk 17.0.7.md
+++ b/docs/01.指南/01.环境搭建/04.Centos7安装Jdk 17.0.7.md
@@ -15,7 +15,7 @@ permalink: /pages/65acfd/
 ###### 上传压缩包（略）
 ```shell
 cd /opt
-tar -zxvf jdk-17_linux-aarch64_bin.tar.gz
+tar -zxvf jdk-17_linux-x64_bin.tar.gz
 ```
 <img src="/img/4/img_1.png"/>
 
