--- a/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
+++ b/docs/01.指南/01.环境搭建/03.Centos7安装RocketMQ 5.1.1.md
@@ -47,14 +47,20 @@ brokerIP1=192.168.1.100
 vi runborker.sh
 vi runserver.sh
 ```
+```shell
+--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED   
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+```
 <img src="/img/3/img_7.png"/>
 <img src="/img/3/img_6.png"/>
+<img src="/img/3/img_5.png"/>
+
 
 ###### 启动
 ```shell
 cd /usr/local/rocketmq5
 nohup sh bin/mqnamesrv &
-nohup sh bin/mqbroker -n 192.168.1.100:9876 -c conf/broker.conf autoCreateTopicEnable=true &
+nohup sh bin/mqbroker -n 192.168.30.128:9876 -c conf/broker.conf autoCreateTopicEnable=true &
 ```
 
 ###### 安装完毕！！！
