--- a/docs/01.指南/02.快速上手/26.SSL证书.md
+++ b/docs/01.指南/02.快速上手/26.SSL证书.md
@@ -78,10 +78,61 @@ server:
 #### 查看 FeignAutoConfiguration 源码
 话不多说，给我怼它（作者使用的okhttp，httpclient类似）  
 <img src="/img/6/img.png"/>
-把disableSslValidationi设为true，就可以绕过ssl
 <img src="/img/6/img_2.png"/>
+```yaml
+spirng:
+    cloud:
+      openfeign:
+        okhttp:
+          enabled: true
+        httpclient:
+          # 把disableSslValidationi设为true，就可以绕过ssl
+          disable-ssl-validation: true
+```
 
 ### httpclient5访问https网站，绕过ssl单向认证 
+把 FeignAutoConfiguration 代码搬过来（嘿嘿，效率为王）
+```java
+public class HttpUtil {
+    public static void main(String[] args) {
+        // 创建HttpClient对象
+        HttpClientBuilder httpClientBuilder = HttpClientBuilder.create();
+        boolean disableSsl = true;
+        if (disableSsl) {
+            disableSsl(httpClientBuilder);
+        }
+    }
+    public static void disableSsl(HttpClientBuilder builder) {
+        // X.509是密码学里公钥证书的格式标准，作为证书标准
+        X509TrustManager disabledTrustManager = new DisableValidationTrustManager();
+        // 信任库
+        TrustManager[] trustManagers = new TrustManager[] { disabledTrustManager };
+        // 怎么选择加密协议，请看 ProtocolVersion
+        // 为什么能找到对应的加密协议 请查看 SSLContextSpi
+        SSLContext sslContext = SSLContext.getInstance(TLS_PROTOCOL_VERSION);
+        sslContext.init(null, trustManagers, new SecureRandom());
+        SSLConnectionSocketFactory sslConnectionSocketFactory = SSLConnectionSocketFactoryBuilder.create()
+                .setSslContext(sslContext).setHostnameVerifier(new TrustAllHostnames()).build();
+        PoolingHttpClientConnectionManager poolingHttpClientConnectionManager = PoolingHttpClientConnectionManagerBuilder
+                .create().setSSLSocketFactory(sslConnectionSocketFactory).build();
+        builder.setConnectionManager(poolingHttpClientConnectionManager);
+    }
+    static class DisableValidationTrustManager implements X509TrustManager {
+        DisableValidationTrustManager() {}
+        public void checkClientTrusted(X509Certificate[] x509Certificates, String s) {}
+        public void checkServerTrusted(X509Certificate[] x509Certificates, String s) {}
+        public X509Certificate[] getAcceptedIssuers() {
+            return new X509Certificate[0];
+        }
+    }
+    static class TrustAllHostnames implements HostnameVerifier {
+        TrustAllHostnames() {}
+        public boolean verify(String s, SSLSession sslSession) {
+            return true;
+        }
+    }
+}
+```
 
 ### nacos开启ssl，各个服务无法注册
 
