--- a/docs/01.指南/02.快速上手/26.SSL证书.md
+++ b/docs/01.指南/02.快速上手/26.SSL证书.md
@@ -76,7 +76,7 @@ server:
 
 ### 服务间开启ssl，openfeign如何调用接口？
 #### 查看 FeignAutoConfiguration 源码
-话不多说，给我怼它（作者使用的okhttp，httpclient类似）  
+话不多说，给我怼源码（作者使用的okhttp，httpclient类似）  
 <img src="/img/6/img.png"/>
 <img src="/img/6/img_2.png"/>
 ```yaml
@@ -134,9 +134,48 @@ public class HttpUtil {
 }
 ```
 
-### nacos开启ssl，各个服务无法注册
+### nacos开启ssl，各个服务无法注册（使用cer）
+查看issue [nacos支持https](https://github.com/alibaba/nacos/pull/3654)  
+#### 配置cer
+```shell
+		// https://github.com/alibaba/nacos/pull/3654
+		// 请查看 HttpLoginProcessor
+		System.setProperty(TlsSystemConfig.TLS_ENABLE, TRUE);
+		System.setProperty(TlsSystemConfig.CLIENT_AUTH, TRUE);
+		# 确保文件位置填写正确
+		System.setProperty(TlsSystemConfig.CLIENT_TRUST_CERT, "tls/register.cer");
+```
+#### yaml配置
+```yaml
+# nacos使用https和http协议，只要注册临时服务，都是走RPC,因此使用https需要改为https
+spring:
+  cloud:
+    # nacos
+    nacos:
+      discovery:
+        server-addr: https://127.0.0.1:8848
+        namespace: public
+        username: nacos
+        password: nacos
+        group: LAOKOU_GROUP
+        # https
+        secure: true
+        # true 临时 false 持久
+        ephemeral: true
+      config:
+        server-addr: https://127.0.0.1:8848
+        namespace: public
+        username: nacos
+        password: nacos
+        # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
+        # 指定读取的文件格式
+        file-extension: yaml
+        group: LAOKOU_GROUP
+        refresh-enabled: true
+```
 
 ### spring-boot-admin开启ssl，各个服务无法注册
+#### 话不多说，给我怼源码
 
 ### gateway对下游服务不信任
 
