--- a/docs/01.指南/02.快速上手/26.SSL证书.md
+++ b/docs/01.指南/02.快速上手/26.SSL证书.md
@@ -60,7 +60,6 @@ keytool -exportcert -v
 ### 如何配置在yaml？
 ```yaml
 server:
-  port: 1111
   ssl:
     # 开启证书,true开启ssl  false关闭ssl
     enabled: true 
@@ -75,8 +74,8 @@ server:
 ```
 
 ### 服务间开启ssl，openfeign如何调用接口？
-#### 查看 FeignAutoConfiguration 源码
-话不多说，给我怼源码（作者使用的okhttp，httpclient类似）  
+#### 查看 FeignAutoConfiguration 源码   
+话不多说，给我怼源码（作者使用的okhttp，httpclient类似）    
 <img src="/img/6/img.png"/>
 <img src="/img/6/img_2.png"/>
 ```yaml
@@ -145,7 +144,7 @@ public class HttpUtil {
 		# 确保文件位置填写正确
 		System.setProperty(TlsSystemConfig.CLIENT_TRUST_CERT, "tls/register.cer");
 ```
-#### yaml配置
+#### yaml配置  
 ```yaml
 # nacos使用https和http协议，只要注册临时服务，都是走RPC,因此使用https需要改为https
 spring:
@@ -175,11 +174,107 @@ spring:
 ```
 
 ### spring-boot-admin开启ssl，各个服务无法注册
-#### 话不多说，给我怼源码
+#### 查看 SpringBootAdminClientAutoConfiguration 源码
+话不多说，给我怼源码  
+<img src="/img/6/img_3.png"/>
+#### 重写自动装配代码
+```java
+@ComponentScan(value = "org.laokou.common.monitor")
+@Configuration(proxyBeanMethods = false)
+@ConditionalOnWebApplication
+@AutoConfiguration
+@Conditional(SpringBootAdminClientEnabledCondition.class)
+@AutoConfigureAfter({ WebEndpointAutoConfiguration.class, RestTemplateAutoConfiguration.class,
+		WebClientAutoConfiguration.class })
+@EnableConfigurationProperties({ ClientProperties.class, InstanceProperties.class, ServerProperties.class,
+		ManagementServerProperties.class })
+public class SpringBootAdminClientAutoConfig {
+    @Configuration(proxyBeanMethods = false)
+    @ConditionalOnBean(RestTemplateBuilder.class)
+    public static class BlockingRegistrationClientConfig {
+
+        /**
+         * 阻塞
+         */
+        @Bean
+        @ConditionalOnMissingBean
+        public RegistrationClient registrationClient(ClientProperties client) {
+            RestTemplateBuilder builder = new RestTemplateBuilder().setConnectTimeout(client.getConnectTimeout());
+            builder.setReadTimeout(client.getReadTimeout());
+            if (client.getUsername() != null && client.getPassword() != null) {
+                builder = builder.basicAuthentication(client.getUsername(), client.getPassword());
+            }
+            RestTemplate build = builder.build();
+            HttpClientBuilder httpClientBuilder = HttpClientBuilder.create();
+            // 直接使用我上面写的
+            HttpUtil.disableSsl(httpClientBuilder);
+            CloseableHttpClient closeableHttpClient = httpClientBuilder.build();
+            HttpComponentsClientHttpRequestFactory requestFactory = new HttpComponentsClientHttpRequestFactory(
+                    closeableHttpClient);
+            build.setRequestFactory(requestFactory);
+            return new BlockingRegistrationClient(build);
+        }
+    }
+    @Configuration(proxyBeanMethods = false)
+    @ConditionalOnBean(WebClient.Builder.class)
+    @ConditionalOnMissingBean(RestTemplateBuilder.class)
+    public static class ReactiveRegistrationClientConfig {
+        /**
+         * 响应式
+         */
+        @Bean
+        @ConditionalOnMissingBean
+        public RegistrationClient registrationClient(ClientProperties client, WebClient.Builder webClient)
+                throws SSLException {
+            if (client.getUsername() != null && client.getPassword() != null) {
+                webClient = webClient.filter(basicAuthentication(client.getUsername(), client.getPassword()));
+            }
+            SslContext context = SslContextBuilder.forClient().trustManager(InsecureTrustManagerFactory.INSTANCE)
+                    .build();
+            HttpClient httpClient = HttpClient.create().secure(t -> t.sslContext(context));
+            webClient.clientConnector(new ReactorClientHttpConnector(httpClient));
+            return new ReactiveRegistrationClient(webClient.build(), client.getReadTimeout());
+        }
+    }
+}
+```
+#### 自动装配
+<img src="/img/6/img_4.png"/>
+
+#### 移除自动装配
+```shell
+@SpringBootApplication(exclude = { SpringBootAdminClientAutoConfiguration.class })
+```
 
 ### gateway对下游服务不信任
+查看spring官方文档 [Gateway TLS 和 SSL](https://docs.spring.io/spring-cloud-gateway/docs/current/reference/html/#tls-and-ssl)
+<img src="/img/6/img_5.png"/>
+```yaml
+spring:
+  cloud:
+    gateway:
+      httpclient:
+        ssl:
+          useInsecureTrustManager: true
+```
 
 ### 如何开启http2？
+#### 什么是http2？
+HTTP/2是一种网络协议，是HTTP/1.1的升级版，为了提高web性能，减少延迟，增加安全性，使web应用更加快速，高效和可靠
+
+#### http2开启条件
+开启条件，就是必须使用ssl证书才行，因此有上面的铺垫，我们可以很轻松的开启
+
+#### yaml配置
+```yaml
+server:
+  http2:
+    enabled: true
+```
+
+补充一句，目前只限于tomcat和undertow
+
+先写到这吧，溜啦，后会有期
 
 ## 参考资料
 [SSL和TLS](https://www.cloudflare.com/zh-cn/learning/ssl/transport-layer-security-tls)
