--- a/docs/01.指南/02.快速上手/01.项目启动.md
+++ b/docs/01.指南/02.快速上手/01.项目启动.md
@@ -63,3 +63,7 @@ permalink: /pages/10bfa7/
 
 🚀 启动laokou-xxl-job（不使用任务调度可以不启动）（springboot版本升级成了spring 3.x.x）   
 <img src="/img/5/img_27.png"/>
+
+## 常见问题
+### 1.vue开启websocket，wss协议无法建立连接
+解决方案见 [自签名证书安装浏览器](/pages/10bfa8/#创建证书-带域名)
