--- a/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
+++ b/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
@@ -33,7 +33,7 @@ yum install -y yum-utils device-mapper-persistent-data lvm2
 ## 设置yum源
 推荐使用阿里云源
 ```shell
-yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo（阿里仓库）
+yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
 ```
 
 ## 安装docker
