--- a/docs/01.指南/02.快速上手/01.项目启动.md
+++ b/docs/01.指南/02.快速上手/01.项目启动.md
@@ -67,3 +67,22 @@ permalink: /pages/10bfa7/
 ## 常见问题
 ### 1.vue开启websocket，wss协议无法建立连接
 解决方案见 [自签名证书安装浏览器](/pages/10bfa8/#创建证书-带域名)
+
+### 2.阿里仓库无法下载最新jar
+修改 maven/conf/setting.xml 配置  
+```xml
+<mirrors>
+    <!-- 增加腾讯仓库 -->
+    <mirror>
+        <id>tencent-cloud</id>
+        <mirrorOf>central</mirrorOf>
+        <url>http://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
+    </mirror>
+    <mirror>
+        <id>alimaven</id>
+        <mirrorOf>central</mirrorOf>
+        <name>aliyun maven</name>
+        <url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
+    </mirror>
+</mirrors>
+```
