--- a/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
+++ b/docs/01.指南/01.环境搭建/05.Centos7安装Docker 23.0.6.md
@@ -53,5 +53,13 @@ systemctl status docker
 systemctl enable docker
 ```
 
+## 常见问题
+### 1.Running docker container : iptables: No chain/target/match by that name
+```shell
+sudo iptables -t filter -F
+sudo iptables -t filter -X
+systemctl restart docker
+```
+
 ## 参考资料
 [centos7安装Docker详细步骤（无坑版教程）](https://cloud.tencent.com/developer/article/1701451)
