--- a/docs/02.赞助/01.赞助.md
+++ b/docs/02.赞助/01.赞助.md
@@ -27,6 +27,12 @@ article: false
         <th>备注</th>
     </tr>
     <tr>
+        <td>2023/08/27</td>
+        <td>*界</td>
+        <td>￥10</td>
+        <td>希望越来越好</td>
+    </tr>
+    <tr>
         <td>2023/06/29</td>
         <td>顺</td>
         <td>￥20</td>
