--- a/docs/01.指南/02.快速上手/02.API网关.md
+++ b/docs/01.指南/02.快速上手/02.API网关.md
@@ -4,7 +4,7 @@ date: 2023-09-26 11:31:05
 permalink: /pages/192acb/
 ---
 
-你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！
+你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！   
 以下内容来源于官网及自己的理解，可以放心食用
 
 ## Spring Cloud Gateway 
@@ -20,8 +20,767 @@ Spring Cloud Gateway旨在提供一种简单而有效的方法来路由到API，
 
 ### 核心概念
 - Route：网关的基本构成单元，它由ID,目标URI，Predicate集合和Filer集合组成，如果满足Predicate，则匹配路由
-- Predicate：断言，这是jdk8 断言函数，输入类型是 ` Spring Framework ServerWebExchange`,可以匹配HTTP请求中的任何内容，例如请求头或参数
+- Predicate：断言，这是jdk8 断言函数，输入类型是 `Spring Framework ServerWebExchange`,可以匹配HTTP请求中的任何内容，例如请求头或参数
 - Filter：是使用特定工厂构造的 `GatewayFilter` 实例，分为两种类型，分别是Gateway Filter（某个路由过滤器）和Global Filter（全局过滤器），您可以对下游服务请求之前或之后修改请求或响应
 
 ### 整体架构
-<img src="/img/9/img.png"/>  
+<img height="700" src="/img/9/img.png"/>  
+
+## 实践
+### 1.基础依赖
+```xml
+<dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-gateway</artifactId>
+    </dependency>
+</dependencies>
+```
+
+### 2.动态路由配置（基于Nacos）
+###### 引入依赖
+```xml
+<dependencies>
+    <dependency>
+        <groupId>com.github.ben-manes.caffeine</groupId>
+        <artifactId>caffeine</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-loadbalancer</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-bootstrap</artifactId>
+    </dependency>
+</dependencies>
+```
+###### 核心代码编写
+```java
+@Component
+@Slf4j
+@NonNullApi
+public class NacosRouteDefinitionRepository implements RouteDefinitionRepository, ApplicationEventPublisherAware {
+
+	private final Cache<String, RouteDefinition> caffeineCache;
+
+	private final ConfigUtil configUtil;
+
+	private ApplicationEventPublisher applicationEventPublisher;
+
+	public NacosRouteDefinitionRepository(ConfigUtil configUtil) {
+		this.configUtil = configUtil;
+		this.caffeineCache = Caffeine.newBuilder().initialCapacity(30).build();
+	}
+
+	@PostConstruct
+	public void init() throws NacosException {
+		log.info("初始化路由配置");
+        // 查看 https://github.com/alibaba/spring-cloud-alibaba/blob/2.2.x/spring-cloud-alibaba-examples/nacos-example/nacos-config-example/src/main/java/com/alibaba/cloud/examples/example/ConfigListenerExample.java
+		String group = configUtil.getGroup();
+		ConfigService configService = configUtil.getConfigService();
+		configService.addListener(ROUTER_DATA_ID, group, new Listener() {
+			@Override
+			public Executor getExecutor() {
+				return Executors.newSingleThreadExecutor();
+			}
+
+			@Override
+			public void receiveConfigInfo(String configInfo) {
+				log.info("收到配置变动通知");
+				// 清除缓存
+				caffeineCache.invalidateAll();
+				// 刷新事件
+				applicationEventPublisher.publishEvent(new RefreshRoutesEvent(this));
+			}
+		});
+	}
+
+	@Override
+	public Flux<RouteDefinition> getRouteDefinitions() {
+		Collection<RouteDefinition> definitions = caffeineCache.asMap().values();
+		if (CollectionUtil.isEmpty(definitions)) {
+			try {
+				// pull nacos config info
+				String group = configUtil.getGroup();
+				ConfigService configService = configUtil.getConfigService();
+				String configInfo = configService.getConfig(ROUTER_DATA_ID, group, 5000);
+				definitions = JacksonUtil.toList(configInfo, RouteDefinition.class);
+				return Flux.fromIterable(definitions).doOnNext(route -> caffeineCache.put(route.getId(), route));
+			}
+			catch (Exception e) {
+				return Flux.fromIterable(new ArrayList<>(0));
+			}
+		}
+		return Flux.fromIterable(definitions);
+	}
+
+	@Override
+	public Mono<Void> save(Mono<RouteDefinition> route) {
+		return Mono.empty();
+	}
+
+	@Override
+	public Mono<Void> delete(Mono<String> routeId) {
+		return Mono.empty();
+	}
+
+	@Override
+	public void setApplicationEventPublisher(ApplicationEventPublisher applicationEventPublisher) {
+		this.applicationEventPublisher = applicationEventPublisher;
+	}
+
+}
+```
+
+###### 在nacos创建动态路由
+1. 启动本项目的laokou-register(推荐使用test环境),访问https://127.0.0.1:8848  nacos/nacos  
+2. 创建router.json文件
+<img src="/img/9/img_1.png"/>
+```json
+[
+  {
+    "id": "laokou-auth",
+    "uri": "lb://laokou-auth",
+    "predicates": [
+      {
+        "name": "Path",
+        "args": {
+          "pattern": "/auth/**"
+        }
+      },
+      {
+        "name": "Weight",
+        "args": {
+          "_genkey_0": "auth",
+          "_genkey_1": "100"
+        }
+      }
+    ],
+    "filters": [
+      {
+        "name": "StripPrefix",
+        "args": {
+          "parts": "1"
+        }
+      },
+      {
+        "name": "RewritePath",
+        "args": {
+          "_genkey_0": "/auth/(?<path>.*)",
+          "_genkey_1": "/$\\{path}"
+        }
+      },
+      {
+        "name": "IpBlack",
+        "args": {
+          "sources": "192.168.62.100"
+        }
+      }
+    ],
+    "metadata": {
+      "version": "2.0"
+    },
+    "order": 999
+  }
+]
+```
+3. 每加入一个服务，按照上述步骤操作即可
+
+### 3.网关限流（基于Nacos+Sentinel）
+###### 引入依赖
+```xml
+<dependencies>
+    <dependency>
+        <groupId>com.alibaba.csp</groupId>
+        <artifactId>sentinel-datasource-nacos</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-circuitbreaker-sentinel</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.alibaba.csp</groupId>
+        <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-alibaba-sentinel-datasource</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        <exclusions>
+            <exclusion>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+</dependencies>
+```
+###### yaml配置
+```yaml
+spring:
+  cloud:
+    # sentinel
+    sentinel:
+      filter:
+        enabled: true
+      datasource:
+        # key可以自定义
+        db0:
+          nacos:
+            server-addr: @NACOS-DISCOVERY-ADDRESS@
+            namespace: @NACOS-NAMESPACE@
+            data-id: gateway-flow.json
+            rule-type: gw_flow # 网关规则
+            group-id: @NACOS-GROUP@
+            data-type: json
+```
+###### 创建文件
+1. 启动本项目的laokou-register(推荐使用test环境),访问https://127.0.0.1:8848  nacos/nacos
+2. 创建gateway-flow.json文件
+<img src="/img/9/img_2.png"/>  
+```json
+[
+  {
+    "resource": "laokou-auth",
+    "grade": 1,
+    "count": 300,
+    "intervalSec": 1,
+    "burst": 1000,
+    "controlBehavior": 0
+  }
+]
+```
+3. 每对一个服务限流，重复上述步骤即可
+
+###### 响应客户端，捕获异常（核心代码）
+```java
+@Component
+@Slf4j
+@NonNullApi
+public class ExceptionHandler implements ErrorWebExceptionHandler, Ordered {
+
+	@Override
+	public Mono<Void> handle(ServerWebExchange exchange, Throwable e) {
+		if (BlockException.isBlockException(e)) {
+			// 思路来源于SentinelGatewayBlockExceptionHandler
+			log.error("请求过于频繁，请稍后再试");
+			return ResponseUtil.response(exchange, Result.fail(SERVICE_BLOCK_REQUEST));
+		}
+	}
+
+	@Override
+	public int getOrder() {
+		return Ordered.HIGHEST_PRECEDENCE;
+	}
+
+}
+```
+
+### 4.IP黑名单
+###### 核心代码
+```java
+@Component
+public class IpBlackGatewayFilterFactory extends AbstractGatewayFilterFactory<IpBlackGatewayFilterFactory.Config> {
+
+	@Override
+	public GatewayFilter apply(Config config) {
+        // 思路来源于 RemoteAddrRoutePredicateFactory
+		return (exchange, chain) -> {
+			if (StringUtil.isEmpty(config.sources)) {
+				return chain.filter(exchange);
+			}
+			List<IpSubnetFilterRule> sources = convert(Arrays.asList(config.sources.split(Constant.COMMA)));
+			InetSocketAddress remoteAddress = config.remoteAddressResolver.resolve(exchange);
+			for (IpSubnetFilterRule source : sources) {
+				if (source.matches(remoteAddress)) {
+					return ResponseUtil.response(exchange, Result.fail(IP_BLACK));
+				}
+			}
+			return chain.filter(exchange);
+		};
+	}
+
+	public IpBlackGatewayFilterFactory() {
+		super(Config.class);
+	}
+
+	@Data
+	static class Config {
+
+		private String sources;
+
+		private volatile RemoteAddressResolver remoteAddressResolver;
+
+		public Config() {
+			remoteAddressResolver = new RemoteAddressResolver() {
+			};
+		}
+
+	}
+
+	private void addSource(List<IpSubnetFilterRule> sources, String source) {
+		if (!source.contains(SLASH)) {
+			source = source + "/32";
+		}
+		String[] ipAddressCidrPrefix = source.split(SLASH, 2);
+		String ipAddress = ipAddressCidrPrefix[0];
+		int cidrPrefix = Integer.parseInt(ipAddressCidrPrefix[1]);
+		sources.add(new IpSubnetFilterRule(ipAddress, cidrPrefix, IpFilterRuleType.ACCEPT));
+	}
+
+	@NotNull
+	private List<IpSubnetFilterRule> convert(List<String> values) {
+		List<IpSubnetFilterRule> sources = new ArrayList<>();
+		for (String arg : values) {
+			addSource(sources, arg);
+		}
+		return sources;
+	}
+
+}
+```
+
+###### 动态路由配置
+需要在 `router.json` 加入如下配置
+```json
+      {
+        "name": "IpBlack",
+        "args": {
+          "sources": "192.168.1.1"
+        }
+      }
+```
+
+### 5.网关鉴权及RSA解密
+###### 核心代码
+```java
+@Component
+@Slf4j
+@RefreshScope
+@Data
+@ConfigurationProperties(prefix = PREFIX)
+public class AuthFilter implements GlobalFilter, Ordered {
+
+	public static final String PREFIX = "spring.cloud.gateway.ignore";
+
+	private Set<String> uris;
+
+	private static final AntPathMatcher ANT_PATH_MATCHER = new AntPathMatcher();
+
+	@Override
+	public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
+		// 获取request对象
+		ServerHttpRequest request = exchange.getRequest();
+		// 获取uri
+		String requestUri = request.getPath().pathWithinApplication().value();
+		// 请求放行，无需验证权限
+		if (pathMatcher(requestUri, uris)) {
+			// 无需验证权限的URL，需要将令牌置空
+			return chain.filter(exchange.mutate().request(request.mutate().header(AUTHORIZATION, "").build()).build());
+		}
+		// 表单提交
+		MediaType mediaType = request.getHeaders().getContentType();
+		if (OAUTH2_AUTH_URI.contains(requestUri) && HttpMethod.POST.matches(request.getMethod().name())
+				&& MediaType.APPLICATION_FORM_URLENCODED.isCompatibleWith(mediaType)) {
+			return oauth2Decode(exchange, chain);
+		}
+		// 获取token
+		String token = RequestUtil.getParamValue(request, AUTHORIZATION);
+		if (StringUtil.isEmpty(token)) {
+			return ResponseUtil.response(exchange, Result.fail(StatusCode.UNAUTHORIZED));
+		}
+		// 增加令牌
+		return chain.filter(exchange.mutate().request(request.mutate().header(AUTHORIZATION, token).build()).build());
+	}
+
+	@Override
+	public int getOrder() {
+		return Ordered.LOWEST_PRECEDENCE - 1000;
+	}
+
+	/**
+	 * OAuth2解密
+	 * @param chain chain
+	 * @param exchange exchange
+	 * @return Mono<Void>
+	 */
+	private Mono<Void> oauth2Decode(ServerWebExchange exchange, GatewayFilterChain chain) {
+		ServerRequest serverRequest = ServerRequest.create(exchange, HandlerStrategies.withDefaults().messageReaders());
+		Mono<String> modifiedBody = serverRequest.bodyToMono(String.class).flatMap(decrypt());
+		BodyInserter<Mono<String>, ReactiveHttpOutputMessage> bodyInserter = BodyInserters.fromPublisher(modifiedBody,
+				String.class);
+		HttpHeaders headers = new HttpHeaders();
+		headers.putAll(exchange.getRequest().getHeaders());
+		headers.remove(HttpHeaders.CONTENT_LENGTH);
+		headers.set(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_FORM_URLENCODED_VALUE);
+		CachedBodyOutputMessage outputMessage = new CachedBodyOutputMessage(exchange, headers);
+		return bodyInserter.insert(outputMessage, new BodyInserterContext()).then(Mono.defer(() -> {
+			ServerHttpRequest decorator = requestDecorator(exchange, headers, outputMessage);
+			return chain.filter(exchange.mutate().request(decorator).build());
+		}));
+	}
+
+	private Function<String, Mono<String>> decrypt() {
+		return s -> {
+			// 获取请求密码并解密
+			Map<String, String> inParamsMap = MapUtil.parseParamMap(s);
+			if (inParamsMap.containsKey(PASSWORD) && inParamsMap.containsKey(USERNAME)) {
+				log.info("密码模式认证...");
+				try {
+					String password = inParamsMap.get(PASSWORD);
+					String username = inParamsMap.get(USERNAME);
+					// 返回修改后报文字符
+					if (StringUtil.isNotEmpty(password)) {
+						inParamsMap.put(PASSWORD, RsaUtil.decryptByPrivateKey(password));
+					}
+					if (StringUtil.isNotEmpty(username)) {
+						inParamsMap.put(USERNAME, RsaUtil.decryptByPrivateKey(username));
+					}
+				}
+				catch (Exception e) {
+					log.error("错误信息：{}", e.getMessage());
+				}
+			}
+			else {
+				log.info("非密码模式:{}", s);
+			}
+			return Mono.just(MapUtil.parseParams(inParamsMap));
+		};
+	}
+
+	private ServerHttpRequestDecorator requestDecorator(ServerWebExchange exchange, HttpHeaders headers,
+			CachedBodyOutputMessage outputMessage) {
+		return new ServerHttpRequestDecorator(exchange.getRequest()) {
+			@Override
+			@NonNull
+			public HttpHeaders getHeaders() {
+				long contentLength = headers.getContentLength();
+				HttpHeaders httpHeaders = new HttpHeaders();
+				httpHeaders.putAll(super.getHeaders());
+				if (contentLength > 0) {
+					httpHeaders.setContentLength(contentLength);
+				}
+				else {
+					httpHeaders.set(HttpHeaders.TRANSFER_ENCODING, "chunked");
+				}
+				return httpHeaders;
+			}
+
+			@Override
+			@NonNull
+			public Flux<DataBuffer> getBody() {
+				return outputMessage.getBody();
+			}
+		};
+	}
+
+	private static boolean pathMatcher(String requestUri, Set<String> uris) {
+		for (String url : uris) {
+			if (ANT_PATH_MATCHER.match(url, requestUri)) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+}
+```
+###### Nacos配置
+1. 创建application-gateway.yaml
+<img src="/img/9/img_3.png">
+```yaml
+spring:
+  cloud:
+    gateway:
+      ignore:
+        uris:
+          # 放行的URI
+          - /actuator/**
+          - /ws/**
+          - /favicon.ico
+          - /swagger-ui/**
+          - /swagger-ui.html
+          - /**/v3/api-docs/**
+```
+
+### 6.基于OAuth2的响应，统一响应格式
+###### 核心代码
+````java
+@Component
+@Slf4j
+@NonNullApi
+public class RespFilter implements GlobalFilter, Ordered {
+
+	@Override
+	public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
+		// 获取request对象
+		ServerHttpRequest request = exchange.getRequest();
+		// 获取uri
+		String requestUri = request.getPath().pathWithinApplication().value();
+		// 表单提交
+		MediaType mediaType = request.getHeaders().getContentType();
+		if (OAUTH2_AUTH_URI.contains(requestUri) && HttpMethod.POST.matches(request.getMethod().name())
+				&& MediaType.APPLICATION_FORM_URLENCODED.isCompatibleWith(mediaType)) {
+			return oauth2Resp(exchange, chain);
+		}
+		else {
+			return chain.filter(exchange);
+		}
+	}
+
+	/**
+	 * OAuth2响应
+	 */
+	private Mono<Void> oauth2Resp(ServerWebExchange exchange, GatewayFilterChain chain) {
+		ServerHttpResponse response = exchange.getResponse();
+		DataBufferFactory dataBufferFactory = response.bufferFactory();
+		ServerHttpResponseDecorator serverHttpResponseDecorator = new ServerHttpResponseDecorator(response) {
+			@Override
+			public Mono<Void> writeWith(Publisher<? extends DataBuffer> body) {
+				String contentType = getDelegate().getHeaders().getFirst(HttpHeaders.CONTENT_TYPE);
+				assert contentType != null;
+				if (contentType.contains(MediaType.APPLICATION_JSON_VALUE)
+						&& Objects.requireNonNull(response.getStatusCode()).value() != StatusCode.OK
+						&& body instanceof Flux) {
+					Flux<? extends DataBuffer> fluxBody = (Flux<? extends DataBuffer>) body;
+					return super.writeWith(fluxBody.map(dataBuffer -> {
+						// 修改状态码
+						response.setStatusCode(HttpStatus.OK);
+						byte[] content = new byte[dataBuffer.readableByteCount()];
+						dataBuffer.read(content);
+						// 释放内容
+						DataBufferUtils.release(dataBuffer);
+						String str = new String(content, StandardCharsets.UTF_8);
+						// str就是response的值
+						JsonNode node = JacksonUtil.readTree(str);
+						JsonNode msgNode = node.get(Constant.ERROR_DESCRIPTION);
+						JsonNode codeNode = node.get(Constant.ERROR);
+						if (msgNode == null) {
+							return dataBufferFactory.wrap(new byte[0]);
+						}
+						String msg = msgNode.asText();
+						int code = codeNode.asInt();
+						if (code == 0) {
+							GlobalException ex = getException(codeNode.asText());
+							code = ex.getCode();
+							msg = ex.getMsg();
+						}
+						byte[] uppedContent = JacksonUtil.toJsonStr(Result.fail(code, msg)).getBytes();
+						return dataBufferFactory.wrap(uppedContent);
+					}));
+				}
+				return super.writeWith(body);
+			}
+		};
+		return chain.filter(exchange.mutate().response(serverHttpResponseDecorator).build());
+	}
+
+	@Override
+	public int getOrder() {
+		return Ordered.HIGHEST_PRECEDENCE + 1500;
+	}
+
+	private GlobalException getException(String code) {
+		ExceptionEnum instance = ExceptionEnum.getInstance(code.toUpperCase());
+		return switch (instance) {
+			case INVALID_CLIENT -> new GlobalException(INVALID_CLIENT, MessageUtil.getMessage(INVALID_CLIENT));
+		};
+	}
+
+	enum ExceptionEnum {
+
+		/**
+		 * 无效客户端
+		 */
+		INVALID_CLIENT;
+
+		public static ExceptionEnum getInstance(String code) {
+			return ExceptionEnum.valueOf(code);
+		}
+
+	}
+
+}
+````
+
+### 7.请求链路（配合slf4j）
+###### 核心代码
+````java
+@Component
+@Slf4j
+@RequiredArgsConstructor
+public class TraceFilter implements GlobalFilter, Ordered {
+
+	@Override
+	public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
+		ServerHttpRequest request = exchange.getRequest();
+		String userId = RequestUtil.getParamValue(request, USER_ID);
+		String tenantId = RequestUtil.getParamValue(request, TENANT_ID);
+		String username = RequestUtil.getParamValue(request, USER_NAME);
+		String traceId = userId + IdGenerator.defaultSnowflakeId();
+		MDC.put(TRACE_ID, traceId);
+		MDC.put(USER_ID, userId);
+		MDC.put(TENANT_ID, tenantId);
+		MDC.put(USER_NAME, username);
+		// 获取uri
+		String requestUri = request.getPath().pathWithinApplication().value();
+		log.info("请求路径：{}， 用户ID：{}， 用户名：{}，租户ID：{}，链路ID：{}", requestUri, userId, username, tenantId, traceId);
+		// 清除
+		MDC.clear();
+		return chain.filter(exchange.mutate().request(request.mutate().header(USER_NAME, username)
+				.header(TENANT_ID, tenantId).header(USER_ID, userId).header(TRACE_ID, traceId).build()).build());
+	}
+
+	@Override
+	public int getOrder() {
+		return Ordered.HIGHEST_PRECEDENCE + 800;
+	}
+
+}
+````
+
+### 8.跨域配置
+###### 核心代码
+```java
+@Configuration
+@Slf4j
+public class CorsConfig {
+
+	@Bean
+	@ConditionalOnMissingBean(WebFilter.class)
+	public WebFilter corsFilter() {
+		return (ServerWebExchange serverWebExchange, WebFilterChain webFilterChain) -> {
+			// 获取request对象
+			ServerHttpRequest request = serverWebExchange.getRequest();
+			if (!CorsUtils.isCorsRequest(request)) {
+				return webFilterChain.filter(serverWebExchange);
+			}
+			// 获取请求头
+			HttpHeaders requestHeaders = request.getHeaders();
+			// 获取response对象
+			ServerHttpResponse response = serverWebExchange.getResponse();
+			// 获取请求头的请求方法
+			HttpMethod requestMethod = requestHeaders.getAccessControlRequestMethod();
+			// 获取响应头
+			HttpHeaders responseHeaders = response.getHeaders();
+			// 允许跨域
+			responseHeaders.add(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, requestHeaders.getOrigin());
+			// 允许请求头
+			responseHeaders.addAll(HttpHeaders.ACCESS_CONTROL_ALLOW_HEADERS,
+					requestHeaders.getAccessControlRequestHeaders());
+			// 允许方法
+			if (requestMethod != null) {
+				responseHeaders.add(HttpHeaders.ACCESS_CONTROL_ALLOW_METHODS, requestMethod.name());
+			}
+			// 允许证书
+			responseHeaders.add(HttpHeaders.ACCESS_CONTROL_ALLOW_CREDENTIALS, "true");
+			// 暴露响应头
+			responseHeaders.add(HttpHeaders.ACCESS_CONTROL_EXPOSE_HEADERS, CorsConfiguration.ALL);
+			// 每1个小时发送一次预请求
+			responseHeaders.add(HttpHeaders.ACCESS_CONTROL_MAX_AGE, "3600");
+			// 获取方法
+			HttpMethod method = request.getMethod();
+			if (method == HttpMethod.OPTIONS) {
+				response.setStatusCode(HttpStatus.OK);
+				return Mono.empty();
+			}
+			return webFilterChain.filter(serverWebExchange);
+		};
+	}
+
+}
+```
+
+### 9.接口文档配置
+###### 引入依赖
+```xml
+<dependencies>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+        </dependency>
+</dependencies>
+```
+###### 核心代码
+```java
+@Configuration
+public class OpenApiDocConfig {
+
+	@Bean
+	@Lazy(value = false)
+	public List<GroupedOpenApi> openApis(RouteDefinitionLocator locator) {
+		List<GroupedOpenApi> groups = new ArrayList<>();
+		locator.getRouteDefinitions().filter(routeDefinition -> routeDefinition.getId().matches("laokou-.*"))
+				.subscribe(routeDefinition -> {
+					String name = routeDefinition.getId().substring(7);
+					GroupedOpenApi.builder().pathsToMatch("/".concat(name).concat("/**")).group(name).build();
+				});
+		return groups;
+	}
+
+}
+```
+
+###### 配置路由
+router.json加入以下内容
+```json
+{
+    "id": "open-api",
+    "uri": "https://127.0.0.1:5555",
+    "predicates": [
+      {
+        "name": "Path",
+        "args": {
+          "pattern": "/v3/api-docs/**"
+        }
+      },
+      {
+        "name": "Weight",
+        "args": {
+          "_genkey_0": "open-api",
+          "_genkey_1": "100"
+        }
+      }
+    ],
+    "filters": [
+      {
+        "name": "RewritePath",
+        "args": {
+          "_genkey_0": "/v3/api-docs/(?<path>.*)",
+          "_genkey_1": "/$\\{path}/v3/api-docs"
+        }
+      }
+    ],
+    "metadata": {},
+    "order": 999
+}
+```
+
+###### yaml配置
+```yaml
+springdoc:
+  swagger-ui:
+    urls:
+      - name: auth
+        url: /v3/api-docs/auth
+```
