--- a/docs/01.指南/02.快速上手/01.项目启动.md
+++ b/docs/01.指南/02.快速上手/01.项目启动.md
@@ -33,11 +33,9 @@ permalink: /pages/10bfa7/
 🚀 打开Nacos控制台，创建命名空间  
 <img src="/img/5/img_7.png"/>
 
-🚀 修改nacos配置的Mysql、Redis、Seata（本地可使用默认配置）和RocketMQ，确保是https连接方式，相关连接信息是否正确
-<img src="/img/5/img_20.png"/>
-
-🚀 在nacos修改shardingsphere的配置，采用rsa加密，不填就是默认密钥，用法和jasypt一样，一定记得修改mysql配置哦（这是后面新加的，后面扩展的内容）
-<img src="/img/5/img_24.png"/>
+🚀 修改nacos配置的Mysql、Redis、Seata（本地可使用默认配置）和RocketMQ，确保相关连接信息是否正确
+<img src="/img/5/img.png"/>
+<img src="/img/5/img_1.png"/>
 
 🚀 修改seata配置（不用改就不改）
 <img src="/img/5/img_10.png"/>  
@@ -55,7 +53,7 @@ permalink: /pages/10bfa7/
 🚀 启动laokou-flowable（不使用工作流可以不启动）
 <img src="/img/5/img_18.png"/>
 
-🚀 启动laokou-monitor（不使用服务监控可以不启动），test环境是https，一定确保nacos里面的配置是https，还有就是别用老夫的邮箱，求求你改一改吧   
+🚀 启动laokou-monitor（不使用服务监控可以不启动），还有就是别用老夫的邮箱，求求你改一改吧   
 <img src="/img/5/img_25.png"/>
 
 🚀 启动laokou-sentinel（不使用流量监控可以不启动）   
